# pick66

./: .editorconfig  .gitignore  Directory.Build.props  GUI_DESIGN.md  GUI_MOCKUP.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MOD_GUI.md  PICK66_IMPLEMENTATION.md  PICK66_LAUNCHER.md  Pick6.sln  Pick66.sln  README.md  README_OLD.md  REFACTORING_NOTES.md  UPGRADE.md  build-release.sh  build.sh  build_output.txt  exception.bat  install.cmd  install.ps1  interface_mockup.txt  validate-powershell.ps1
.github/workflows/: build-loader.yml
Tools/: Build-Payload.ps1
cpp/: CMakeLists.txt  README.md
cpp/src/: main.cpp
cpp/src/core/: FrameBuffer.cpp  FrameBuffer.h  GameCapture.cpp  GameCapture.h  ProcessDetector.cpp  ProcessDetector.h  Settings.cpp  Settings.h
cpp/src/gui/: KeybindManager.cpp  KeybindManager.h  MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h
cpp/src/projection/: ProjectionWindow.cpp  ProjectionWindow.h  Renderer.cpp  Renderer.h  StealthManager.cpp  StealthManager.h
docs/: auto-update-manifest.sample.json  auto-update.md  performance.md
docs/archive/: PICK66_IMPLEMENTATION_OLD.md
src/Pick6.Core/: Class1.cs  FiveMDetector.cs  GlobalKeybindManager.cs  ICaptureBackend.cs  Log.cs  MonitorHelper.cs  Pick6.Core.csproj  VulkanFrameCapture.cs  VulkanInjector.cs
src/Pick6.Core/Diagnostics/: FrameStatistics.cs
src/Pick6.Core/Timing/: FramePacer.cs
src/Pick6.Core/Util/: Spinner.cs  TextGlyphs.cs
src/Pick6.GUI/: DEPRECATED.md  MainForm.cs  Pick6.GUI.csproj  Program.cs
src/Pick6.Launcher/: DEPRECATED.md  Pick6.Launcher.csproj  Program.cs
src/Pick6.Loader/: ConsoleMenu.cs  MainForm.cs  Pick6.Loader.csproj  Program.cs
src/Pick6.Loader/Controllers/: ProjectionController.cs
src/Pick6.Loader/Logging/: GuiLogSink.cs
src/Pick6.Loader/Properties/PublishProfiles/: SingleFileWin64.pubxml  WindowsSingleFile.pubxml
src/Pick6.Loader/Settings/: SettingsService.cs  UserSettings.cs
src/Pick6.Loader/UI/: UserSettingsDialog.cs
src/Pick6.Loader/Update/: InitialPayloadExtractor.cs  PayloadInfo.cs  PayloadLauncher.cs  Updater.cs  VersionStore.cs
src/Pick6.ModGui/: GuiState.cs  ImGuiLogSink.cs  ImGuiSettings.cs  Pick6.ModGui.csproj  Program.cs
src/Pick6.Projection/: Pick6.Projection.csproj  Program.cs  WindowsProjectionForm.cs
src/Pick6.UI/: DEPRECATED.md  Pick6.UI.csproj  Program.cs  app.manifest
src/Pick66.App/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Pick66.App.csproj
src/Pick66.App/Commands/: RelayCommand.cs
src/Pick66.App/Converters/: CountToVisibilityConverter.cs
src/Pick66.App/Themes/: Colors.xaml
src/Pick66.App/ViewModels/: MainViewModel.cs
src/Pick66.Console/: Pick66.Console.csproj  Program.cs
src/Pick66.Core/: Class1.cs  FiveMDetector.cs  INumberPickerService.cs  NumberPickerService.cs
src/Pick66.Gui/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Pick66.Gui.csproj
src/Pick66.Gui/Services/: AppSettings.cs  LoggingService.cs  SettingsService.cs  WpfLogSink.cs
src/Pick66.Gui/Styles/: DarkTheme.xaml  LightTheme.xaml
src/Pick66.Gui/Views/: SettingsWindow.xaml  SettingsWindow.xaml.cs
src/Pick66.Launcher/: MainLauncherForm.cs  Pick66.Launcher.csproj  Program.cs  ProxyManager.cs
src/Pick66.Projection/: Pick66.Projection.csproj  Program.cs  WindowsProjectionForm.cs
src/Pick66.ProxyDlls/: CMakeLists.txt
src/Pick66.ProxyDlls/Common/: ProxyCommon.cpp  ProxyCommon.h
src/Pick66.ProxyDlls/D3D11Proxy/: D3D11Proxy.h
src/Pick66.ProxyDlls/DxgiProxy/: DxgiProxy.cpp  DxgiProxy.h
src/Pick66.Tests/: NumberPickerServiceTests.cs  Pick66.Tests.csproj  SettingsServiceTests.cs
src/Pick66.UI/: Program.cs
